feat: add lesson resource management and event listeners - Implemented LessonResourceController and LessonResourceService for managing lesson resources. - Added LessonModifiedEvent and CourseModuleModifiedEvent for handling updates to lessons and course modules duration. - Introduced LessonResource entity and corresponding DTOs for creation and response. - Updated Course and Lesson entities to include duration and video URL fields.